# bot_cotacao

./: pyproject.toml
bot_cotação/: __init__.py
tests/: __init__.py
