[tool.poetry]
name = "bot-cotação"
version = "0.1.0"
description = ""
authors = ["Clisamax <clisamax.gomes.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.37"
pyautogui = "^0.9.54"
pyperclip = "^1.8.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
